# agent-visibility-audit

./: .env.example  .gitignore  BRIEF.md  LICENSE  README.md  index.html  pyproject.toml  run_experiment.py
config/: experiment.yaml  experiment_q2.yaml
data/: smartwatches.yaml
data/prompts/: default.txt  no_price_ceiling.txt
results/: README.md  analysis_summary.md  audit_report.json  audit_report.md  before_after.json  lift_vs_control.csv  pick_rates.csv  runs.csv  runs.json
results_q2/: README.md  analysis_summary.md  audit_report.json  audit_report.md  before_after.json  lift_vs_control.csv  pick_rates.csv  runs.csv  runs.json
src/: analyze.py  audit.py  environment.py  runner.py  schema.py  treatments.py
