[project]
name = "agent-visibility-audit"
version = "0.1.0"
description = "PMG hackathon experiment harness: measure agent pick-rate lifts from footprint edits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
